--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Courier', monospace;
     color: black;
     margin: auto;
     max-width: 50em;
