--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -12,11 +12,11 @@ body {
 
 #page-title h1 a, .post a {
     color: #ccc;
+    text-decoration: none;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #ff2e88;
 }
-
-a :hover{
-    background-color:#ff2e88;
-    color:#fff}, 
 
 a {
     text-decoration: none;
@@ -25,8 +25,21 @@ a {
     border-bottom-color: #ff2e88;
 }
 
+a:link {
+    color: #ccc;
+}
+
+a:visited {
+    color: #ccc;
+}
+
+a:hover{
+    background-color:#ff2e88;
+    color:#fff} 
+
 #page-title a:hover, .post a:hover {
-    text-decoration: underline;
+    background-color:#ff2e88;
+    color:#fff
    
 }
 
