--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -12,7 +12,7 @@ body {
 }
 
 #page-title h1 a, .post a {
-    color: #ccc;
+    color: #ff9800;
     text-decoration: none;
     border-bottom-width: 1px;
     border-bottom-style: solid;
@@ -26,7 +26,7 @@ a {
     border-bottom-color: #ff2e88;
 }
 
-a:link {
+body a:link {
     color: #ccc;
 }
 
