--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
 }
 
-#page-title h1 a, .post a {
+#page-title h1 a, .date-time-title a, .post a {
     color: #ff9800;
     text-decoration: none;
     border-bottom-width: 1px;
