--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
 }
 
-#page-title h1 a, .date-time-title a, .post a {
+#page-title h1 a, .post a {
     color: #ff9800;
     text-decoration: none;
     border-bottom-width: 1px;
@@ -26,9 +26,6 @@ a {
     border-bottom-color: #ff2e88;
 }
 
-body a:link {
-    color: #ccc;
-}
 
 a:visited {
     color: #ccc;
