okay i think this will finally fix the links

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -26,9 +26,12 @@ a {
     border-bottom-color: #ff2e88;
 }
 
+body a:link {
+    color: #ff9800;
+}
 
 a:visited {
-    color: #ccc;
+    color: #ff9800;
 }
 
 a:hover{
