--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Courier', monospace;
+    font-family: Hack,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier,Courier New,monospace,serif;
     line-height: 1.5rem;
     color: #ccc;
     margin: auto;
